
gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for libgeda 

Most recent changes are at the top of this file

2000-10-06  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/o_line_basic.c: Removed all // comments

	* src/Makefile.am: Bumped libgeda so version to 10.0.0

2000-10-05  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/o_circle_basic.c: Added o_circle_modify

	* src/*.c: Fixed most -Wall warnings

	* include/struct.h: Added some variables for new line type / width
   	  dialog box

2000-10-04  Ales Hvezda  <ahvezda@geda.seul.org>

	* include/struct.h: Added draw_grips variable to OBJECT structure

	* src/o_selection.c: Added code to set and unset draw_grips variable

	* src/s_basic.c: Added code to init draw_grips variable

	* include/defines.h: Added a few grip related #define's

	* src/o_line_basic.c: Added o_line_modify

	* src/o_net_basic.c: Made o_net_modify look like o_line_modify

	* src/o_pin_basic.c: Made o_pin_modify look like o_line_modify

	* src/o_bus_basic.c: Made o_bus_modify look like o_line_modify

	* src/o_box_basic.c: Added o_box_modify

2000-10-02  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/o_box_basic.c: Further updated the file format per Patrick's
	  instructions

	* src/o_circle_basic.c: Further updated the file format per Patrick's
	  instructions

	* src/o_arc_basic.c: Found a instance where the wrong object was 
	  getting it's line type and file options set (in o_arc_copy.c)

	* src/o_basic.c: Renamed all d1 to length and d2 to space

	* src/f_print.c: Added f_print_set_line_width
	
	* src/o_*_basic.c: Make the appropriate call to above

	* src/o_line_basic.c: Added line type postscript output (solid,
	  dotted, dashed, center, phantom)

	* src/o_box_basic.c: Added postscript output using line postscript
	  output code

	* src/o_complex_basic.c: Found an bug where mirror flag was being
	  set to -1 for embedded components (should have really been 0)
