@@ -8,6 +8,12 @@ ChangeLog for libgeda
 
 Most recent changes are at the top of this file
 
+2000-10-10  Stefan Petersen  <spe@geda.seul.org>
+
+	* src/f_basic.c: f_open returns an int; 0 on failure, 1 on success
+
+	* include/prototype.h: f_open returns an int.
+	
 2000-10-06  Ales Hvezda  <ahvezda@geda.seul.org>
 
 	* src/o_line_basic.c: Removed all // comments
